[package]
name = "conclave-room-net"
version = "0.0.2-pre01"
edition = "2021"
license = "MIT"
description = "network layer for a conclave room"
repository = "https://github.com/piot/conclave-room-net-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conclave-room = "0.0.2-pre02"
conclave-room-serialize = "0.0.2-pre02"
flood-rs = "0.0.3"
